@@ -8,6 +8,12 @@ fleet:
     protocol: https
     host: localhost:5601
     timeout: 30s
+  server:
+    output:
+      elasticsearch:
+        hosts: [ 127.0.0.1:9200, 127.0.0.1:9300 ]
+        username: fleet
+        password: fleetpassword
 
 outputs:
   default:
@@ -25,6 +31,11 @@ outputs:
     ca_sha256: "7lHLiyp4J8m9kw38SJ7SURJP4bXRZv/BNxyyXkCcE/M="
 
 inputs:
+- id: fleet-server-id
+  type: fleet-server
+  use_output: default
+  data_stream:
+    type: default
 - type: docker/metrics
   use_output: default
   streams:
